<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>EADC</groupId>
   <artifactId>CoDaPack</artifactId>
   <version>2.03.07</version>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
   <build>
      <pluginManagement>
         <plugins>
            <plugin>
               <groupId>com.github.akman</groupId>
               <artifactId>jpackage-maven-plugin</artifactId>
               <version>0.1.5</version>
            </plugin>
         </plugins>
      </pluginManagement>
      <plugins>
         <plugin>
            <groupId>org.codehaus.mojo</groupId>
            <artifactId>exec-maven-plugin</artifactId>
            <version>3.1.0</version>
            <configuration>
               <executable>java</executable>
               <arguments>
                  <argument>
                     -Djava.library.path=Rlibraries/rJava/jri/:</argument>
                  <argument>-classpath</argument>
                  <classpath />
                  <argument>coda.gui.CoDaPackMain</argument>
               </arguments>
            </configuration>
         </plugin>

         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <source>11</source>
                <target>11</target>
                <fork>true</fork>			
            </configuration>
         </plugin>
         
         <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>3.6.0</version>
            <configuration>
               <archive>
                  <manifest>
                     <mainClass>coda.gui.CoDaPackMain</mainClass>
                  </manifest>
                  <manifestEntries>
                     <Built-By>CoDaPack team</Built-By>
                  </manifestEntries>
               </archive>
               <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
               </descriptorRefs>
            </configuration>
            <executions>
               <execution>
                  <id>make-assembly</id>
                  <phase>package</phase> 
                  <goals>
                  <goal>single</goal>
                  </goals>
               </execution>
            </executions>
         </plugin>
      </plugins>
   </build>
   <dependencies>
      <dependency>
         <groupId>javax.json</groupId>
         <artifactId>javax.json-api</artifactId>
         <version>1.1.4</version>
      </dependency>
      <dependency>
         <groupId>org.yaml</groupId>
         <artifactId>snakeyaml</artifactId>
         <version>2.2</version> <!-- o última disponible -->
      </dependency>
      <dependency>
         <groupId>batik</groupId>
         <artifactId>batik-swing</artifactId>
         <version>1.6-1</version>
      </dependency>
      <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-math</artifactId>
         <version>2.2</version>
      </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.11</version>
        </dependency>

      <dependency>
         <groupId>org.renjin</groupId>
         <artifactId>renjin-script-engine</artifactId>
         <version>3.5-beta76</version>
      </dependency>

      <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi</artifactId>
         <version>5.4.0</version>
      </dependency>
      <dependency>
         <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml</artifactId>
         <version>5.4.0</version>
      </dependency>
      <dependency>
         <groupId>net.java.dev.swing-layout</groupId>
         <artifactId>swing-layout</artifactId>
         <version>1.0.2</version>
      </dependency>
      <dependency>
         <groupId>org.scilab.forge</groupId>
         <artifactId>jlatexmath</artifactId>
         <version>1.0.2</version>
      </dependency>
      <dependency>
         <groupId>com.github.lucarosellini.rJava</groupId>
         <artifactId>JRI</artifactId>
         <version>0.9-7</version>
      </dependency>
      <dependency>
         <groupId>com.github.lucarosellini.rJava</groupId>
         <artifactId>REngine</artifactId>
         <version>0.9-7</version>
      </dependency>
      <dependency>
         <groupId>com.github.lucarosellini.rJava</groupId>
         <artifactId>JRIEngine</artifactId>
         <version>0.9-7</version>
      </dependency>
      <dependency>
         <groupId>org.controlsfx</groupId>
         <artifactId>controlsfx</artifactId>
         <version>11.2.2</version>
     </dependency>
      <dependency>
         <groupId>com.itextpdf</groupId>
         <artifactId>itextpdf</artifactId>
         <version>5.5.13.3</version>
         <type>jar</type>
      </dependency>
      <!-- <dependency>
         <groupId>org.openjfx</groupId>
         <artifactId>javafx</artifactId>
         <version>17</version>
         <type>pom</type>
     </dependency> -->
     <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>11</version>
   </dependency>
   <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-web</artifactId>
      <version>11</version>
  </dependency>
  <dependency>
   <groupId>org.openjfx</groupId>
   <artifactId>javafx-controls</artifactId>
   <version>11</version>
</dependency>
  
      <dependency>
         <groupId>au.com.bytecode</groupId>
         <artifactId>opencsv</artifactId>
         <version>2.4</version>
         <type>jar</type>
      </dependency>
      <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
         <version>2.15.1</version>
      </dependency>
   </dependencies>
   <repositories>
      <repository>
         <id>central</id>
         <name>Maven Central Repository</name>
         <url>https://repo.maven.apache.org/maven2</url>
      </repository>
      <repository>
         <id>openjfx</id>
         <name>OpenJFX repository</name>
         <url>https://maven.pkg.github.com/openjfx/openjfx</url>
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </repository>
      <repository>
         <id>bedatadriven</id>
         <name>bedatadriven public repo</name>
         <url>https://nexus.bedatadriven.com/content/groups/public/</url>
      </repository>
   </repositories>
</project>
